# Lygos

./: .gitignore  Cargo.toml  Makefile  README.md  a.out  cat  compile_commands.json  main.ll  run.sh  test.ly  test.py  test.sh  test.txt  test1.txt  test2.txt  test3.txt  tests.sh  todo.md  zstd.dll.lib  zstd.lib
llvm/: Cargo.toml  build.rs
llvm/src/: bindings.cpp  lib.rs
lygos/: Cargoc.toml
lygos/src/: main.ll  main.ly
src/: containers.h  core.h  global.h  intrinsics.cpp  intrinsics.h  intrinsics.o.json  io.rs  llvm.h  main.cpp  main.o.json  main.rs  test.cpp  test.o.json  trait.o.json  types.cpp  types.h  types.o.json  types.rs  util.cpp  util.h  util.o.json
src/ast/: access.cpp  access.h  access.o.json  access.rs  assignment.cpp  assignment.h  assignment.o.json  assignment.rs  ast.cpp  ast.h  ast.o.json  ast.rs  binary.cpp  binary.h  binary.o.json  binary.rs  call.cpp  call.h  call.o.json  call.rs  casting.cpp  casting.h  casting.o.json  casting.rs  cfg.cpp  cfg.h  cfg.o.json  control_flow.cpp  control_flow.h  control_flow.o.json  control_flow.rs  function.cpp  function.h  function.o.json  function.rs  generic.h  generic.o.json  impl.cpp  impl.h  impl.o.json  (+37 more)
src/backend/: ast.cpp  ast.h  ast.o.json  lexer.cpp  lexer.h  lexer.o.json  parser.cpp  parser.h  pregen.h  (+6 more)
std/: Makefile  hash.c  macro.ly  print.c  string.ly
tests/: control_flow.ly  for_loop  for_loop.ll  for_loop.ly  init_list  init_list.ll  init_list.ly  macro  macro.ll  macro.ly  match  match.ll  match.ly  member_fn  member_fn.ll  member_fn.ly  test  test.ll  test.ly  trait  trait.ll  trait.ly
(+153 files in other folders)
