[package]
name = "lygosc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "llvm" ]


[dependencies]
llvm = { path = "llvm" }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = {version = "4.0.11", features = ["derive"] }
ariadne.workspace = true
path-absolutize = "3.1.0"
libc.workspace = true

[workspace.dependencies]
cc = { version = "1.0" }
libc = "0.2"
ariadne = "0.1.5"
